# Experimental-SLM

./: .gitignore  README.md  architecture.md  main.py  phase1-checklist.md  phase1-sessions.md  phase2-hyperparameters.md  project-outline.md  pyproject.toml  questions.md  soft-thinking.md
.cursor/commands/: analyze-test-failure.md
configs/: README.md  custom-transformer.yaml  default.yaml  detailed-eval.yaml  fast-training.yaml  large-model.yaml  qwen-base.yaml  qwen2.5-0.5b.yaml  small-model.yaml
docs/: hyperparameter-audit-summary.md  hyperparameter-audit.md  multi-model-tutorial.md
models/: registry.json
openspec/: project.md
src/: __init__.py  config.py  dataloader.py  dataset.py  normalize.py  tokenizer.py
src/evaluation/: __init__.py  evaluator.py
src/hooks/: __init__.py  forward_hooks.py  registry.py  update_hooks.py
src/model/: __init__.py  attention.py  embeddings.py  layer_norm.py  mlp.py  registry.py  transformer.py  transformer_block.py
src/model/adapters/: base.py  (+3 more)
src/quantization/: __init__.py  ptq.py  qat.py  quantizer.py
src/sampling/: __init__.py  sampler.py
src/training/: __init__.py  checkpoint.py  loss.py  trainer.py
tests/: __init__.py  test_adapters.py  test_attention.py  test_checkpoint.py  test_config.py  test_dataloader.py  test_dataset.py  test_embeddings.py  test_evaluator.py  test_hooks.py  test_import_cli.py  test_integration.py  test_layer_norm.py  test_mlp.py  test_normalize.py  test_quantization.py  test_registry.py  test_sampler.py  test_tokenizer.py  test_trainer.py  test_transformer.py  test_transformer_block.py
(+94 files in other folders)
