[project]
name = "experimental-slm"
version = "0.1.0"
description = "A small, locally runnable language model built from first principles for learning and experimentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pyyaml>=6.0.0",
    "torch>=2.0.0",
    "torchao>=0.1.0",
    "transformers>=4.57.0",
    "huggingface-hub>=0.34,<1.0",
    "safetensors>=0.7.0",
    "tqdm>=4.66.0",
    "accelerate>=1.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
